<resources>
    <!--General App Strings-->
    <string name="app_name">Genesis Client</string>
    <string name="app_version_number">1.0.0 Alpha</string>

    <!--LoginActivity Strings-->
    <string name="login_title">Login</string>
    <string name="login_email_label">Genesis Username</string>
    <string name="login_pass_label">Password</string>
    <string name="login_id_label">Student ID</string>
    <string name="login_button_label">Login</string>
    <string name="login_error_label">Invalid user name or password. Please try again.</string>

    <!--OverviewActivity Strings-->
    <string name="overview_title">Overview</string>
    <string name="overview_refresh">Refresh</string>

    <!--ClassActivity Strings-->
    <string name="class_title">ClassActivity</string>
    <string name="class_period">Period %1$s</string>

    <!--Sample Strings used in previews in the IDE-->
    <string name="sample_class_period">1</string>
    <string name="sample_class_name">Intro to Engineering</string>
    <string name="sample_class_grade">100.00%</string>
    <string name="sample_class_teacher">Milewska, Anna</string>
    <string name="sample_class_room">A2</string>
    <string name="sample_class_id">1112:1</string>
    <string name="sample_assignment_name">Secret Life of Bees Essay</string>
    <string name="sample_assignment_grade">88%</string>
    <string name="sample_assignment_category">Test</string>
    <string name="sample_assignment_date">9/3/2015</string>
    <string name="sample_assignment_points">88 / 100</string>

    <!-- SettingsActivity Strings -->
    <string name="title_activity_settings">Settings</string>

    <!-- Storage settings -->
    <string name="pref_header_storage">Storage</string>
    <string name="pref_storage_general">General</string>
    <string name="pref_storage_clear_all_t">Clear All Storage</string>
    <string name="pref_storage_clear_all_s">Clears all saved files, including
        files for notifications, login information, and the cache</string>
    <string name="pref_storage_cache">Cache</string>
    <string name="pref_storage_auto_cache">Automatically Cache Files</string>
    <string name="pref_storage_clear_cache_t">Clear Cache</string>
    <string name="pref_storage_clear_cache_s">Clears temporary files that
        may take up space</string>

    <!-- Notification Settings -->
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_notification_enabled_t">Enable Notifications</string>
    <string name="pref_notification_enabled_s">Check Genesis in the background
        for any new updates, and send a notification if there is one</string>
    <string name="pref_notification_sync">Sync</string>
    <string-array name="pref_notification_sync_times">
        <item>15 Minutes</item>
        <item>30 Minutes</item>
        <item>1 Hour</item>
        <item>12 Hours</item>
        <item>1 Day</item>
    </string-array>
    <string-array name="pref_notification_sync_vals">
        <item>900000</item>
        <item>1800000</item>
        <item>3600000</item>
        <item>43200000</item>
        <item>86400000</item>
    </string-array>
    <string name="pref_notification_sync_freq_t">Sync Frequency</string>
    <string name="pref_notification_sync_freq_s">How often the app
        will check Genesis in the background</string>
    <string name="pref_notification_no_wifi_t">Sync without WiFi</string>
    <string name="pref_notification_no_wifi_s">Will update more often, but will
        use up cellular data</string>
    <string name="pref_notification_notification">Notification Settings</string>
    <string name="pref_notification_vibrate">Vibrate</string>

    <!-- About App -->
    <string name="pref_header_about">About App</string>
    <string name="pref_about_version">Version Number</string>
    <string name="pref_about_license">Copyright Information</string>
    <string name="pref_about_license_genesis_t">Genesis App</string>
    <string name="pref_about_license_genesis_s">Copyright &#169; 2016 by Devon Ulrich under the MIT
        License</string>
    <string name="pref_about_license_jsoup_t">JSoup</string>
    <string name="pref_about_license_jsoup_s">Copyright &#169; 2009-2016 by Jonathan Hedley under
        the MIT License</string>

</resources>
