<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/pref_storage_general" />

    <Preference
        android:key="storage_clear_storage"
        android:title="@string/pref_storage_clear_all_t"
        android:summary="@string/pref_storage_clear_all_s"/>

    <PreferenceCategory
        android:title="@string/pref_storage_cache" />

    <SwitchPreference
        android:key="storage_cache"
        android:title="@string/pref_storage_auto_cache"
        android:defaultValue="true" />

    <Preference
        android:key="storage_clear_cache"
        android:title="@string/pref_storage_clear_cache_t"
        android:summary="@string/pref_storage_clear_cache_s"/>
</PreferenceScreen>