<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- A 'parent' preference, which enables/disables child preferences (below)
         when checked/unchecked. -->
    <SwitchPreference
        android:defaultValue="true"
        android:key="notifications_enabled"
        android:title="@string/pref_notification_enabled_t"
        android:summary="@string/pref_notification_enabled_s"/>

    <PreferenceCategory
        android:title="@string/pref_notification_sync" />

    <ListPreference
        android:key="notifications_sync_time"
        android:dependency="notifications_enabled"
        android:entries="@array/pref_notification_sync_times"
        android:entryValues="@array/pref_notification_sync_vals"
        android:defaultValue="1"
        android:title="@string/pref_notification_sync_freq_t"
        android:summary="@string/pref_notification_sync_freq_s"/>

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="notifications_sync_no_wifi"
        android:dependency="notifications_enabled"
        android:title="@string/pref_notification_no_wifi_t"
        android:summary="@string/pref_notification_no_wifi_s" />

    <PreferenceCategory
        android:title="@string/pref_notification_notification" />

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="notifications_vibrate"
        android:dependency="notifications_enabled"
        android:title="@string/pref_notification_vibrate" />

</PreferenceScreen>
