<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="5dp"
    android:layout_marginStart="5dp"
    android:layout_marginEnd="5dp"
    android:clickable="true"
    android:foreground="?android:attr/selectableItemBackground"
    android:onClick="onCardClick"
    android:id="@+id/card_view">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="10dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:text="@string/sample_class_period"
            android:textSize="40sp"
            android:id="@+id/card_period" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/card_period"
            android:text="@string/sample_class_name"
            android:textSize="20sp"
            android:id="@+id/card_class" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:text="@string/sample_class_grade"
            android:textSize="20sp"
            android:id="@+id/card_grade" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/card_period"
            android:layout_toEndOf="@+id/card_period"
            android:text="@string/sample_class_teacher"
            android:id="@+id/card_teacher" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/card_period"
            android:layout_alignParentEnd="true"
            android:text="@string/sample_class_period"
            android:id="@+id/card_room" />

        <!--not actually part of the layout - simply used for storing the ID-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:text="@string/sample_class_id"
            android:id="@+id/card_id" />

    </RelativeLayout>

</android.support.v7.widget.CardView>